hahA just memeing

--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,23 @@
 <html lang="en">
     <head>
         <title>
+            <style>
+                h1 {
+                color: cyan
+                }
+                h2 {
+                    color: green
+                }
+            </style>
             Hello!</title>
         </head>
         <body>
+            <h1>
+                I am cyan dubididuba die i f i w a s gr ee n i would die
+            </h1>
+            <h2>
+                I AM FXKING DEAD
+            </h2>
             Hello world!
         </body>
     
