--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
             <h2>
                 I AM FXKING DEAD
             </h2>
+        </style>
             Hello world!
         </body>
