--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
         </head>
         <body>
             <h1>
+                <style>
+                    h1 {
+                    color: cyan
+                    }
+                    h2 {
+                        color: green
+                    }
+                </style>
                 I am cyan dubididuba die i f i w a s gr ee n i would die
             </h1>
             <h2>
                 I AM FXKING DEAD
             </h2>
-        </style>
-            Hello world!
+        Hello world!
         </body>
