I think this is it; style fix v3

--- a/index.html
+++ b/index.html
@@ -2,29 +2,12 @@
 <html lang="en">
     <head>
         <title>
-            <style>
-                h1 {
-                color: cyan
-                }
-                h2 {
-                    color: green
-                }
-            </style>
             Hello!</title>
         </head>
         <body>
-            <h1>
-                <style>
-                    h1 {
-                    color: cyan
-                    }
-                    h2 {
-                        color: green
-                    }
-                </style>
-                I am cyan dubididuba die i f i w a s gr ee n i would die
-            </h1>
-            <h2>
+            <h1 style:="color:cyan;">I am cyan dubididuba die i f i w a s gr ee n i would die</h1>
+           
+            <h2 style:="color:green;">
                 I AM FXKING DEAD
             </h2>
         Hello world!
