--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             Hello!</title>
         </head>
         <body>
-            <h1 style:="color:cyan;">I am cyan dubididuba die i f i w a s gr ee n i would die</h1>
+            <h1 style:="color:cyan;">I am  dubididuba die i f i w a s gr ee n i would die</h1>
            
             <h2 style:="color:green;">
                 I AM FXKING DEAD
