--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
             <h2 style:="color:green;">
                 I AM FXKING DEAD
             </h2>
-        Hello world!
+        Hello w0rld!
         </body>
